--- a/src/Components/Home/Home/Home.css
+++ b/src/Components/Home/Home/Home.css
@@ -1,6 +1,4 @@
-.custom-carousel {
-    padding-top:7.2rem; /* Adjust the top margin as needed */
-  }
+
   
   .custom-carousel .carousel-inner {
     height: 85vh; /* Ensure the images inside the carousel stretch to match the parent container's height */
@@ -11,3 +9,79 @@
     height: 85vh; /* Make sure the images cover the entire height of the carousel */
   }
   
+ .about-container{
+    width: 100%;
+  padding: 5rem 15rem;
+ }  
+
+ .main-content-con{
+  border: 1px solid black;
+  padding: 1rem;
+  display: flex;
+  flex-direction:column ;
+  gap: 25px;
+ }
+ 
+ .top-con{
+  display: flex;
+  justify-content: center;
+  gap: 25px;
+ }
+ .text-con{
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+ }
+ .text-con p{
+  font-size: 1.1rem;
+  line-height: 32px;
+  text-align: justify;
+ }
+ .bottom-con{
+  font-size: 1.1rem;
+  line-height: 32px;
+  text-align: justify;
+ }
+
+ .img-con{
+    width: 450rem;
+    box-shadow: 2px 2px 10px;
+    margin: 10px;
+ }
+
+.dept-img{
+  width: 100%;
+  height: 100%;
+
+}
+
+@media (min-width: 1200px) and (max-width: 1440px ) {
+  .about-container{
+   width: 100%;
+   padding: 5rem 10rem;
+ }  
+ }
+
+
+@media (min-width: 1000px) and (max-width: 1200px ) {
+ .about-container{
+  width: 100%;
+  padding: 5rem 4rem;
+}  
+}
+
+
+@media (max-width: 1000px ) {
+  .top-con{
+    display: flex;
+    flex-direction: column;
+  }
+  .img-con{
+    width: auto;
+    box-shadow: 2px 2px 10px;
+ }
+ .about-container{
+  width: 100%;
+  padding: 5rem 1rem;
+}  
+}
