--- a/src/Components/Home/Home/Home.css
+++ b/src/Components/Home/Home/Home.css
@@ -85,3 +85,37 @@
   padding: 5rem 1rem;
 }  
 }
+
+.about-container-vm{
+  width: 100%;
+padding: 0rem 15rem;
+} 
+
+.main-content-con-vm{
+  border: 1px solid black;
+  padding: 1rem;
+  display: flex;
+  flex-direction:column;
+  gap: 25px;
+ }
+
+ .font-styling{
+  font-size: 1.1rem;
+  line-height: 32px;
+  text-align: justify;
+ }
+
+ .points{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+ }
+ .vm-con{
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+ }
+
+ /*--------------------------------------------------------------
+# Stats Section
+--------------------------------------------------------------*/
