--- a/src/Components/Home/Home/Home.css
+++ b/src/Components/Home/Home/Home.css
@@ -15,7 +15,7 @@
  }  
 
  .main-content-con{
-  border: 1px solid black;
+
   padding: 1rem;
   display: flex;
   flex-direction:column ;
@@ -55,44 +55,13 @@
 
 }
 
-@media (min-width: 1200px) and (max-width: 1440px ) {
-  .about-container{
-   width: 100%;
-   padding: 5rem 10rem;
- }  
- }
-
-
-@media (min-width: 1000px) and (max-width: 1200px ) {
- .about-container{
-  width: 100%;
-  padding: 5rem 4rem;
-}  
-}
-
-
-@media (max-width: 1000px ) {
-  .top-con{
-    display: flex;
-    flex-direction: column;
-  }
-  .img-con{
-    width: auto;
-    box-shadow: 2px 2px 10px;
- }
- .about-container{
-  width: 100%;
-  padding: 5rem 1rem;
-}  
-}
 
 .about-container-vm{
   width: 100%;
-padding: 0rem 15rem;
+  padding: 3rem 15rem 10rem 15rem;
 } 
 
 .main-content-con-vm{
-  border: 1px solid black;
   padding: 1rem;
   display: flex;
   flex-direction:column;
@@ -116,6 +85,142 @@ padding: 0rem 15rem;
   gap: 15px;
  }
 
- /*--------------------------------------------------------------
-# Stats Section
---------------------------------------------------------------*/
+ 
+.stats-container{
+  width: 100%;
+  padding: 2rem;
+  display: flex;
+  gap: 3rem;
+  justify-content: space-around;
+  background-color: #155E95;
+  color: white;
+  flex-wrap: wrap;
+}
+
+.stat-item{
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  justify-content: center;
+  align-items: center;
+}
+
+.stat-item p{
+  font-size: 2rem;
+}
+
+
+.welcome-con{
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+
+.about-container-welcome{
+  width: 100%;
+  padding: 10rem 15rem;
+} 
+
+.main-content-con-welcome{
+  padding: 1rem;
+  display: flex;
+  flex-direction:column;
+  gap: 25px;
+ }
+
+.heading-name{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.name{
+  display: flex;
+  gap: 5px;
+  align-items: center;
+}
+
+.heading-name h2{
+  padding-left: 5px;
+}
+
+.hod_image{
+  border: 1px solid black;
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+}
+.detial{
+  display: flex;
+  flex-direction: column;
+  gap: 7px;
+  justify-content: center;
+}
+
+.main-content p {
+  font-size: 1.1rem;
+  line-height: 32px;
+  text-align: justify;
+}
+
+
+ @media (min-width: 1200px) and (max-width: 1440px ) {
+  .about-container-vm{
+   width: 100%;
+   padding: 2rem 10rem;
+ }  
+ .about-container{
+  width: 100%;
+  padding: 5rem 10rem;
+}  
+.about-container-welcome{
+  width: 100%;
+  padding: 5rem 10rem;
+} 
+ }
+
+
+@media (min-width: 1000px) and (max-width: 1200px ) {
+  .about-container-vm{
+  width: 100%;
+  padding: 2rem 4rem;
+}  
+.about-container{
+  width: 100%;
+  padding: 5rem 4rem;
+}  
+.about-container-welcome{
+  width: 100%;
+  padding: 5rem 4rem;
+} 
+}
+
+
+@media (max-width: 1000px ) {
+  .top-con{
+    display: flex;
+    flex-direction: column;
+  }
+  .img-con{
+    width: auto;
+    box-shadow: 2px 2px 10px;
+ }
+ .about-container{
+  width: 100%;
+  padding: 5rem 1rem;
+}  
+.about-container-vm{
+  width: 100%;
+  padding: 2rem 1rem;
+}  
+.about-container-welcome{
+  width: 100%;
+  padding: 2rem 1rem;
+} 
+}
+
+@media (max-width: 800px ){
+  .name{
+    display: flex;
+    flex-direction: column;
+  }
+}
