--- a/src/Components/People/Seperate_Student/Seperate_student.module.css
+++ b/src/Components/People/Seperate_Student/Seperate_student.module.css
@@ -1,21 +1,32 @@
 .con{
     padding:3em 3em;
-    padding-top: 7.2rem;
+    padding-top:2rem;
+
+}
+
+.con h1{
+    margin:.3em 1em;
 
 }
 
 .content{
+    margin:2em 4em;
     margin-top: 1em;
     padding: 1em;
     display: flex;
     justify-content: center;
     flex-direction: column;
+    border: 1px solid;
+    border-radius: 10px;
+}
+.content h2{
+    margin: 0em .5em;
 }
 
 .para{
     padding-left: 2em;
     margin:.5em 0em;
-    font-size: 1.5em;
+    font-size: 1.4em;
     display: grid;
     grid-template-columns: 75% 25%;
 }
@@ -27,6 +38,7 @@
     border: 1px solid ;
     min-height: 250px;
     width:80%;  
+    border-radius: 10px;
 }
 
 .image_cover{
@@ -43,4 +55,57 @@
 
 .image_size img{
     min-height: 250px;
+}
+
+.option {
+    display: flex;
+    margin: .5em 1em;
+    flex-wrap: wrap;
+}
+
+.option li{
+    margin:.5em 1em;
+    list-style: none;
+    padding: .5em;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(229, 226, 223);
+}
+
+.option img{
+    height:20px;
+    width:20px; 
+    margin: 0em .3em;
+}
+
+.pdf_container{
+    padding: 1em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width:100%;
+    flex-direction: column;
+}
+.card_size{
+    width: 85%;
+    border-radius: 10px;
+}
+
+.card_size > iframe{
+    border-radius: 10px;        
+
+}
+.pdf_container h1{
+    align-self: flex-start;
+    margin:0em 1em ;
+    margin-bottom: .5em;
+}
+
+.line{
+    width:100%;
+    height: 1px;
+    margin: .5em 0em;
+    background-color: black;
 }
