--- a/src/Components/Event/Seperate_event/Event_Seperate_page.module.css
+++ b/src/Components/Event/Seperate_event/Event_Seperate_page.module.css
@@ -14,11 +14,17 @@
     align-items: center;
 }
 
-.card_size > iframe{
-    border-radius: 10px;        
 
+.card_size img{
+    width: 100%;
+    height:650px;
+    object-fit: cover;
+    border-radius: 20px;
+    border: 4px solid rgb(82, 149, 207);
+    box-shadow: -.5em -.5em .7em rgb(136, 191, 238);
 }
-.pdf_container h1{
+
+.pdf_container h1,h2{
     align-self: flex-start;
     margin:0em 1em ;
     margin-bottom: .5em;
@@ -31,6 +37,7 @@
 
 .para{
     padding:.5em 1em;
+    width:90%;
 }
 
 .para p{
@@ -39,4 +46,21 @@
 
 .main_cover{
     margin-top: 1.5em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.line{
+    width:90%;
+    height: 1px;
+    margin: .5em 0em;
+    background-color: black;
+}
+
+.bolding{
+    font-weight: 600;
+    font-size: 1.5em;
+ 
 }
