--- a/src/Components/authentication/Login.css
+++ b/src/Components/authentication/Login.css
@@ -1,27 +1,34 @@
 .mani-container{
     padding: 8rem 41rem;
 }
+
+.hirthick-container{
+    display: flex;
+    justify-content: center;
+    padding: 5rem;
+}
+
 @media (min-width: 1200px) and (max-width: 1440px ) {
     .mani-container{
-        padding: 8rem 25rem;
+        padding: 8rem 27rem;
 
     }
 }
 @media (min-width: 1000px) and (max-width: 1200px ) {
     .mani-container{
-        padding: 8rem 20rem;
+        padding: 8rem 15rem;
 
     }
 }
 @media (max-width: 1000px ) {
     .mani-container{
-        padding: 8rem 10rem;
+        padding: 8rem 8rem;
 
     }
 }
 @media (max-width: 715px){
     .mani-container{
-        padding: 8rem 5rem;
+        padding: 8rem 4rem;
 
     }
 }
