--- a/src/Components/Home/Home/Home.css
+++ b/src/Components/Home/Home/Home.css
@@ -24,6 +24,8 @@
   padding: 1em;
   display: flex;
   flex-direction:column ;
+  justify-content: center;
+  align-items: center;
   gap: 25px;
  }
  
@@ -420,7 +422,7 @@ height: 100%;
    }
    
     .img-con{
-      min-width: 20em;
+      min-width: 16em;
       box-shadow: 2px 2px 10px;
       margin: 10px;
    }
@@ -457,6 +459,7 @@ height: 100%;
   .heading-name h3{
     font-size: 1.1rem;
   }
+
 }
 
 
