--- a/src/Components/People/Seperate_Student_Edit/Seperate_student_Edit.module.css
+++ b/src/Components/People/Seperate_Student_Edit/Seperate_student_Edit.module.css
@@ -95,6 +95,7 @@
     justify-content: center;
     align-items: center;
     background-color: rgb(229, 226, 223);
+    text-decoration: none;
 }
 
 .option img{
