--- a/src/Components/People/Seperate_Student/Seperate_student.module.css
+++ b/src/Components/People/Seperate_Student/Seperate_student.module.css
@@ -299,7 +299,21 @@
     
     }
 }
+.pdf-container {
+    width: 100%; /* Adjust max width as needed */
+    margin: auto;
+}
 
+.pdf-container .card {
+    width: 100%;
+    max-width: 90%; /* Adjust card width */
+}
+
+.pdf-container iframe {
+    width: 100%;
+    height: 900px; /* Adjust height as needed */
+    border-radius: 10px; /* Optional: Rounded corners */
+}
 @media (min-width:315px) and (max-width:400px){
 
     .para{
@@ -348,4 +362,5 @@
         padding-top:1rem;
     
     }
+    
 }
