--- a/src/Components/People/Faculty/Faculty.css
+++ b/src/Components/People/Faculty/Faculty.css
@@ -6,6 +6,13 @@
   
 }
 
+.center-it{
+  border: 1px solid black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .card:hover {
   transform: translateY(-5px);
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
